--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,17 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.fragment:fragment:1.2.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    //noinspection GradleCompatible
+    implementation "com.android.support:cardview-v7:27.1.1"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     implementation 'com.google.android.material:material:1.1.0'
 
